# genkai-game-rs

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: codeql.yml
src/: app.rs
static/: index.css  index.html
