[package]
name = "yew-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.64"
yew = "0.17.2"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
rand = "0.7.3"
js-sys = "0.3.44"
web-sys = { version =  "0.3.44", features = ["HtmlAudioElement"] }
log = "0.4.11"

[profile.release]
lto = true
opt-level = 's'
